--- a/nginx/Nginx.conf
+++ b/nginx/Nginx.conf
@@ -2,17 +2,27 @@ events {}
 
 http {
     # Define group of servers available
+    # Functional feed to flask application
     upstream app {
-        server app;
-        server predictivemaintenance_app_1:5000;
-        server predictivemaintenance_app_2:5000;
+        server app:5000;
+        #server predictivemaintenance_app_1:5000;
+        #server predictivemaintenance_app_2:5000;
     }
+    #upstream frontend {
+    #    server frontend;
+    #    server predictivemaintenance_frontend_1:3000;
+    #}
 
     server {
         listen 80;
+        # Functional feed to flask app
         server_name app.com;
         location / {
             proxy_pass http://app;
         }
+        #server_name frontend.com;
+        #location / {
+        #    proxy_pass http://frontend;
+        #}
     }
 }
